Add Oracle GC documentation to CLAUDE.md
Add comprehensive Oracle GC section documenting:
- Modified files for oracle-based memory management
- JVM flags (EpsilonOracleMode, EpsilonOracleTracePath, etc.)
- Build and run instructions
- Oracle file format specification
- Key implementation details (thread remapping, allocation filtering)
- Related project references

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>